--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <script type='text/javascript'>
 
   function mover(){
-    window.location = 'https://t.co/9Grl82YqPq'
+    window.location = 'https://t.co/cxeKQCKYaL'
 
   }; 
 
